--- a/src/exercises/exercise05/styles.module.css
+++ b/src/exercises/exercise05/styles.module.css
@@ -1,6 +1,16 @@
 .container {
     display: flex;
     flex-direction: column;
+    justify-content: center;
+    align-items: center;
     padding: 10px 10px;
     gap: 15px
+}
+
+.card_container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    width: 50%;
+    align-items: center;
 }
