--- a/src/exercises/exercise06/styles.module.css
+++ b/src/exercises/exercise06/styles.module.css
@@ -4,3 +4,12 @@
     padding: 10px 10px;
     gap: 15px
 }
+
+.body_container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 70px;
+    margin-top: 50px;
+}
