--- a/src/exercises/exercise07/styles.module.css
+++ b/src/exercises/exercise07/styles.module.css
@@ -4,3 +4,18 @@
     padding: 10px 10px;
     gap: 15px
 }
+
+.body_container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 70px;
+    margin-top: 50px;
+}
+
+@media (max-width: 600px) {
+    .body_container {
+        flex-direction: row;
+    }
+}
